--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>L'atelier du héron bleu</title>
+    <title>Ateliers du héron bleu</title>
   </head>
   <body>
     <noscript>
